# src/generated/swagger.yaml
@@ -259,6 +259,11 @@ paths:
           schema:
             format: int32
             type: integer
+        - in: query
+          name: catLevel
+          required: false
+          schema:
+            type: string
   /users/{userId}:
     get:
       operationId: GetUser
